# InterPlanetGame

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-toolchain  serverCargo.toml  serverbuild.rs  tsconfig.json  webpack.config.js
.github/workflows/: deploy-frontend.yaml  deploy-server.yaml
client/: Cargo.toml
client/src/: lib.rs
client/src/game_client/: game_render.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/game/: map.rs  mod.rs
core/src/protocol/: messages.rs  mod.rs
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/game_client/: game_render.rs  mod.rs
maps/: example_map.json  trio.json  warzone.json
server/: Cargo.toml  build.rs
server/src/: game_server.rs  main.rs
server/src/game/: map.rs  mod.rs
server/src/game_server/: client.rs  connection.rs  map_manager.rs  message_handler.rs  messages.rs  mod.rs  rejoin.rs
server/src/map_server/: mod.rs
ts/: Root.tsx  bootstrap.js  conts.ts  gameInfo.ts  index.ts  index.tsx
ts/components/: ConnectionError.tsx  ConnectionStatus.tsx  GameForm.tsx  GameItem.tsx  GameList.tsx  GameWindow.tsx  PlayerName.tsx
ts/connection/: hooks.ts  index.ts
ts/state/: mode.ts
ts/style/: layout.css  main.css  theme.css
ts/util/: hooks.ts
