[package]
authors = ["GiantCowFilms"]
categories = ["wasm"]
description = "Inter-Planet Game"
license = "Apache-2.0/MIT"
name = "ipg_client"
readme = "./README.md"
repository = ""
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
ipg_core = { path = "../core" }
serde_json = "1.0.36"
serde = { version = "1.0.85", features = ["rc"]}
serde_derive = "^1.0.85"
js-sys = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2.42"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.22"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebGlVertexArrayObject",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlUniformLocation",
  "WebGlProgram",
  "WebGlShader",
  "Node",
  "Window",
  "Performance",
  "console",
  "WebSocket"
]

[features]
webgl_errors = []
default = ["console_error_panic_hook"]
