[package]
name = "ipg_core"
version = "0.1.0"
authors = ["GiantCowFilms <git@giantcowfilms.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.5"
serde_json = "1.0.36"
serde = { version = "1.0.85", features = ["rc"]}
serde_derive = "1.0.85"
rand = "0.7.2"
rand_xoshiro = "0.4.0"
#static_assertions = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
